# tfrefactor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tfrefactor.yml
api/: index.py
tests/: conftest.py  test_anti_patterns.py  test_blocksplit.py  test_graph.py  test_refactors.py  test_verify.py  test_web.py
tests/fixtures/messy_project/: main.tf  services.tf
tests/fixtures/messy_project/envs/dev/: main.tf
tests/fixtures/messy_project/envs/prod/: main.tf
tfrefactor/: anti_patterns.py  blocksplit.py  cli.py  graph.py  verify.py
tfrefactor/refactors/: base.py  dead_code.py  extract_module.py  parameterize.py  rename_backfill.py  split_god_file.py  unify_duplicates.py
tfrefactor/web/: app.py
tfrefactor/web/static/: index.html
