[project]
name = "tfrefactor"
version = "0.1.0"
description = "Safe, verifiable LLM-native refactoring for Terraform"
requires-python = ">=3.11"
dependencies = [
    "python-hcl2>=8.1",
    "click>=8.1",
    "fastapi>=0.110",
    "pydantic>=2.6",
]
# fastapi/pydantic are in base dependencies (not an optional "web" extra)
# because Vercel's Python builder installs from pyproject.toml's base
# dependencies only - it has no mechanism to opt into extras.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
web = [
    "uvicorn>=0.30",
]

[project.scripts]
tfrefactor = "tfrefactor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tfrefactor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
